--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,11 +1,10 @@
 [versions]
 activity-compose = "1.9.2"
-agp = "8.6.1"
+agp = "8.7.0"
 core-ktx-version = "1.13.1"
 espresso-core = "3.6.1"
-junit-version = "1.1.5"
+junit-version = "1.2.1"
 kotlin = "1.9.25"
-agl = "8.6.1"
 google-ksp-version = "1.9.25-1.0.20"
 compose-bom-version = "2024.09.02"
 lifecycle-runtime-ktx-version = "2.8.6"
@@ -38,8 +37,8 @@ ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
+android-library = { id = "com.android.library", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-android-library = { id = "com.android.library", version.ref = "agl" }
 google-ksp = { id = "com.google.devtools.ksp", version.ref = "google-ksp-version" }
 
 [bundles]
